--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-visually-hidden": "^1.0.2",
+    "class-variance-authority": "^0.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
